ctx-demo/09-opentelemetry-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: opentelemetry-collector-svc
spec:
  selector:
    app: opentelemetry-collector
  type: ClusterIP
  ports:
    - name: otel-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: otel-http
      port: 4318
      targetPort: 4318
      protocol: TCP
